# mdutil

./: .gitignore  AGENTS.md  LICENSE  README.md  mdutil-specification.md  pyproject.toml  setup.py  todo.md
mdutil/: __init__.py  __main__.py  cli.py  config.py  display.py  editor.py  log_utils.py  parser.py  reader.py  renderer.py  search.py  syntax_highlighter.py  themes.py  version.py
tests/: lorem_ipsum_100k.md  lorem_ipsum_10k.md  lorem_ipsum_20k.md  lorem_ipsum_250k.md  lorem_ipsum_500k.md  lorem_ipsum_50k.md  lorem_ipsum_5k.md  lorem_ipsum_75k.md  test_cli.py  test_config.py  test_display.py  test_editor.py  test_golden_output.py  test_parser.py  test_project_metadata.py  test_reader.py  test_renderer.py  test_syntax_highlighter.py  test_themes.py
tests/fixtures/: inline-quality.golden  inline-quality.md  no-color-theme.json  representative.golden  representative.md  unicode-table.golden  unicode-table.md
